# cf-jupyterlab-to-a2a

./: QUICK-START.md  README.md  app.py  manifest.yml  pyproject.toml  summarizer.py
cfutils/: __init__.py  cfgenai.py
